Improve MeasurementList implementation
Relates to
* https://github.com/qupath/qupath/issues/1444
* https://github.com/qupath/qupath/issues/1591
partly by incorporating synchronization from https://github.com/qupath/qupath/pull/1466 and partly by making more defensive copies of measurement names (rather than returning an unmodifiable list that wraps a list that can still change).

Alongside this, deprecated methods are removed from MeasurementList and there is some refactoring/cleanup.