@@ -4,7 +4,7 @@
  * %%
  * Copyright (C) 2014 - 2016 The Queen's University of Belfast, Northern Ireland
  * Contact: IP Management (ipmanagement@qub.ac.uk)
- * Copyright (C) 2018 - 2020 QuPath developers, The University of Edinburgh
+ * Copyright (C) 2018 - 2024 QuPath developers, The University of Edinburgh
  * %%
  * QuPath is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
@@ -46,9 +46,9 @@ import org.slf4j.LoggerFactory;
  * can be rather slow.  Therefore while 'adding' is fast, 'putting' is not.
  * <p>
  * However, upon calling {@code close()}, name lists are shared between similarly closed NumericMeasurementLists,
- * and a map used to improve random access of measurements. Therefore if many lists of the same measurements
- * are made, remembering to close each list when it is fully populated can improve performance and greatly
- * reduce memory requirements.
+ * and a map used to improve random access of measurements.
+ * Therefore, if many lists of the same measurements are made, remembering to close each list when it is fully
+ * populated can improve performance and greatly reduce memory requirements.
  * <p>
  * These lists can be instantiated through the {@link MeasurementListFactory} class.
  * 
@@ -59,7 +59,7 @@ class NumericMeasurementList {
 	
 	private static final Logger logger = LoggerFactory.getLogger(NumericMeasurementList.class);
 	
-	private static Map<List<String>, NameMap> namesPool = Collections.synchronizedMap(new WeakHashMap<>());
+	private static final Map<List<String>, NameMap> namesPool = Collections.synchronizedMap(new WeakHashMap<>());
 	
 
 	private static class NameMap {
@@ -68,7 +68,7 @@ class NumericMeasurementList {
 		private Map<String, Integer> map;
 		
 		NameMap(List<String> names) {
-			this.names = Collections.unmodifiableList(new ArrayList<>(names)); // Make a defensive copy
+			this.names = List.copyOf(names); // Make an unmodifiable defensive copy
 			createHashMap();
 		}
 		
@@ -105,7 +105,7 @@ class NumericMeasurementList {
 
 		private Map<String, Integer> map; // Optional map for fast measurement lookup
 		
-		private transient Map<String, Number> mapView;
+		private transient volatile Map<String, Number> mapView;
 
 		AbstractNumericMeasurementList(int capacity) {
 			names = new ArrayList<>(capacity);
@@ -125,7 +125,7 @@ class NumericMeasurementList {
 		}
 
 		@Override
-		public void close() {
+		public synchronized void close() {
 			if (isClosed())
 				return;
 			compactStorage();
@@ -154,7 +154,7 @@ class NumericMeasurementList {
 		
 
 		@Override
-		public boolean isEmpty() {
+		public synchronized boolean isEmpty() {
 			return names.isEmpty();
 		}
 		
@@ -167,13 +167,13 @@ class NumericMeasurementList {
 			// Read from map, if possible
 			if (map != null) {
 				Integer ind = map.get(name);
-				return ind == null ? -1 : ind.intValue();
+				return ind == null ? -1 : ind;
 			}
 			return names.indexOf(name);
 		}
 		
 		@Override
-		public final int size() {
+		public final synchronized int size() {
 			return names.size();
 		}
 
@@ -188,32 +188,34 @@ class NumericMeasurementList {
 					namesUnmodifiable = nameMap.getUnmodifiableNames();
 				}
 			}
-			if (namesUnmodifiable == null)
-				namesUnmodifiable = Collections.unmodifiableList(names);
-			else
+			if (namesUnmodifiable == null) {
+				// We need to make a defensive copy, since the underlying list may be modified
+				return List.copyOf(names);
+//				namesUnmodifiable = Collections.unmodifiableList(names);
+			} else
 				assert names.size() == namesUnmodifiable.size();
 			return namesUnmodifiable;
 		}
 		
 		@Override
-		public double get(String name) {
+		public synchronized double get(String name) {
 			return getMeasurementValue(getMeasurementIndex(name));
 		}
 
 		@Override
-		public boolean containsKey(String measurementName) {
+		public synchronized boolean containsKey(String measurementName) {
 			if (!isClosed)
-				logger.trace("containsNamedMeasurement called on open NumericMeasurementList - consider closing list earlier for efficiency");
+				logger.trace("containsKey called on open NumericMeasurementList - consider closing list earlier for efficiency");
 			return names.contains(measurementName);
 		}
 
 		@Override
-		public String getMeasurementName(int ind) {
+		public synchronized String getMeasurementName(int ind) {
 			return names.get(ind);
 		}
 		
 		@Override
-		public void clear() {
+		public synchronized void clear() {
 			ensureListOpen();
 			names.clear();
 			namesUnmodifiable = null;
@@ -243,27 +245,13 @@ class NumericMeasurementList {
 			}
 		}
 		
-
-		@Override
-		public boolean supportsDynamicMeasurements() {
-			return false;
-		}
-		
 		void compactStorage() {
 			if (isClosed())
 				return;
 			if (names instanceof ArrayList)
 				((ArrayList<String>)names).trimToSize();
 		}
-		
-		
-		@Override
-		public Measurement putMeasurement(Measurement measurement) {
-			if (measurement.isDynamic())
-				throw new UnsupportedOperationException("This MeasurementList does not support dynamic measurements");
-			put(measurement.getName(), measurement.getValue());
-			return null;
-		}
+
 		
 		@Override
 		public Map<String, Number> asMap() {
@@ -309,7 +297,7 @@ class NumericMeasurementList {
 		}
 		
 		@Override
-		public double getMeasurementValue(int ind) {
+		public synchronized double getMeasurementValue(int ind) {
 			if (ind >= 0 && ind < size())
 				return values[ind];
 			return Double.NaN;
@@ -321,20 +309,21 @@ class NumericMeasurementList {
 		}
 
 		@Override
-		protected void setValue(int index, double value) {
+		protected synchronized void setValue(int index, double value) {
 			ensureArraySize(index + 1);
 			values[index] = (float)value;
 		}
 		
 		@Override
-		public void compactStorage() {
+		public synchronized void compactStorage() {
 			super.compactStorage();
-			if (size() < values.length)
-				values = Arrays.copyOf(values, size());
+			int size = size();
+			if (size < values.length)
+				values = Arrays.copyOf(values, size);
 		}
 
 		@Override
-		public void removeMeasurements(String... measurementNames) {
+		public synchronized void removeMeasurements(String... measurementNames) {
 			ensureListOpen();
 			for (String name : measurementNames) {
 				int ind = getMeasurementIndex(name);
@@ -344,7 +333,6 @@ class NumericMeasurementList {
 				System.arraycopy(values, ind+1, values, ind, values.length-ind-1);
 			}
 		}
-
 		
 	}
 
@@ -363,33 +351,34 @@ class NumericMeasurementList {
 		}
 
 		@Override
-		public double getMeasurementValue(int ind) {
+		public synchronized double getMeasurementValue(int ind) {
 			if (ind >= 0 && ind < size())
 				return values[ind];
 			return Double.NaN;
 		}
 
-		private void ensureArraySize(int length) {
+		private synchronized void ensureArraySize(int length) {
 			if (values.length < length)
 				values = Arrays.copyOf(values, Math.max(values.length + EXPAND, length));
 		}
 
 		@Override
-		protected void setValue(int index, double value) {
+		protected synchronized void setValue(int index, double value) {
 			ensureArraySize(index + 1);
 			values[index] = (float)value;
 		}
 		
 		@Override
-		public void compactStorage() {
+		public synchronized void compactStorage() {
 			super.compactStorage();
-			if (size() < values.length)
-				values = Arrays.copyOf(values, size());
+			int size = size();
+			if (size < values.length)
+				values = Arrays.copyOf(values, size);
 		}
 
 		
 		@Override
-		public void removeMeasurements(String... measurementNames) {
+		public synchronized void removeMeasurements(String... measurementNames) {
 			ensureListOpen();
 			for (String name : measurementNames) {
 				int ind = getMeasurementIndex(name);
@@ -401,6 +390,5 @@ class NumericMeasurementList {
 		}
 
 	}
-	
 
 }
